--- a/src/app/pages/groups/group-home-page/group-home-page.component.scss
+++ b/src/app/pages/groups/group-home-page/group-home-page.component.scss
@@ -56,9 +56,9 @@ ion-segment {
         width: 100%;
         display: flex;
         justify-content: flex-end;
-        .default-button {
-            color: white !important;
-        }
+        // .default-button {
+        //     color: white !important;
+        // }
     }
 }
 
