--- a/src/app/pages/groups/groups.page.html
+++ b/src/app/pages/groups/groups.page.html
@@ -21,7 +21,7 @@
     
     <ion-card-content>
      <div class="button-container">
-      <ion-button>
+      <ion-button (click)="selectGroup(Group)">
         <ion-icon name="home-outline" slot="start"></ion-icon>
         <ion-label>Home</ion-label>
       </ion-button>
