--- a/src/app/pages/search/group/group.component.html
+++ b/src/app/pages/search/group/group.component.html
@@ -16,7 +16,7 @@
           <ion-img src ="{{suggestion.profileURL}}"></ion-img>
         </ion-avatar>
         <ion-label>
-          <h2>{{ suggestion.displayName }}</h2>
+          <h2 class="user-name">{{ suggestion.displayName }}</h2>
           <p>{{"~ " + suggestion.bio}}</p>
         </ion-label>
       </ion-item>
@@ -39,20 +39,15 @@
           </div>
         </ion-col>
       </ion-row>
-      <ion-row *ngFor="let row of rows">
-        <ion-col *ngFor="let item of row" size="6">
-          <ion-item class="transparent-item">
+      <ion-row>
+        <ion-col *ngFor="let group of groups" (click)="selectGroup(group)">
+          <ion-item lines="none" class="transparent-item">
             <ion-avatar slot="start">
-              <ion-img [src]="item.profileURL"></ion-img>
+              <ion-img [src]="group.profileURL"></ion-img>
             </ion-avatar>
             <ion-label class="label">
-              <h5>{{item.displayName}}</h5>
-              <p class="overflow-hidden">{{item.bio}}</p>
-              <ion-buttons>
-                <ion-button class="default-button" expand="block" (click)="selectGroup(item)">
-                  <ion-icon name="chevron-forward-outline" class="view-button"></ion-icon>
-                </ion-button>
-              </ion-buttons>
+              <h2 class="user-name">{{group.displayName}}</h2>
+              <p class="overflow-hidden">{{"~ "+group.bio}}</p>
             </ion-label>
           </ion-item>
         </ion-col>
