--- a/src/app/pages/search/usersearch/usersearch.component.html
+++ b/src/app/pages/search/usersearch/usersearch.component.html
@@ -16,7 +16,7 @@
           <ion-img src ="{{suggestion.profileURL}}"></ion-img>
         </ion-avatar>
         <ion-label>
-          <h2>{{ suggestion.displayName }}</h2>
+          <h2 class="user-name">{{ suggestion.displayName }}</h2>
           <p>{{"~ " +suggestion.bio}}</p>
         </ion-label>
       </ion-item>
