--- a/src/app/pages/search/usersearch/usersearch.component.scss
+++ b/src/app/pages/search/usersearch/usersearch.component.scss
@@ -23,3 +23,11 @@ ion-item{
 ion-card, ion-item {
     border-radius: 2px;
 }
+
+p {
+    font-style: italic;
+}
+
+.user-name {
+    font-weight: bolder;
+}
