--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -16,79 +16,86 @@
         <option *ngFor="let workout of plannedWorkouts" [value]="workout.id">{{ workout.name }}</option>
       </select>
       <div class="form-container">
+
         <form [formGroup]="workoutForm">
-          <div
-            formArrayName="exercises"
-            *ngFor="let exercise of exercises.controls; index as i"
-          >
+          <div formArrayName="exercises" *ngFor="let exercise of exercises.controls; index as i">
             <div class="exercise-number">Exercise {{ i + 1 }}</div>
             <div [formGroupName]="i">
-              <select
-                formControlName="name"
-                placeholder="name"
-                (change)="exerciseSelected($event, i)"
-              >
-                <!-- <option value="" disabled selected>Select an exercise</option> -->
-                <!-- <option *ngFor="let option of exerciseOptions" [value]="option">{{ option }}</option> -->
-                <option value="" hidden selected>Select an exercise</option>
-                <option value="Barbell Curls">Barbell Curls</option>
-                <option value="Barbell Rows">Barbell Rows</option>
-                <option value="Bench Presses">Bench Presses</option>
-                <option value="Bicep Curls">Bicep Curls</option>
-                <option value="Burpees">Burpees</option>
-                <option value="Calf Raises">Calf Raises</option>
-                <option value="Chest Press">Chest Press</option>
-                <option value="Crunches">Crunches</option>
-                <option value="Deadlifts">Deadlifts</option>
-                <option value="Dumbbell Rows">Dumbbell Rows</option>
-                <option value="Jumping Jacks">Jumping Jacks</option>
-                <option value="Leg Curls">Leg Curls</option>
-                <option value="Leg Presses">Leg Presses</option>
-                <option value="Lunges">Lunges</option>
-                <option value="Planks">Planks</option>
-                <option value="Pull-Ups">Pull-Ups</option>
-                <option value="Push-Ups">Push-Ups</option>
-                <option value="Seated Cable Rows">Seated Cable Rows</option>
-                <option value="Sit-Ups">Sit-Ups</option>
-                <option value="Squats">Squats</option>
-                <option value="Stretches">Stretches</option>
-                <option value="Tricep Curls">Tricep Curls</option>
-                <!-- <option value="Cycling">Cycling</option>
-                <option value="TreadMill">Treadmill</option> -->
-                <!-- <option value="Crunches">Crunches</option> -->
-                <!-- <option value="pushUps">Push-Ups</option> -->
-              </select>
-              <input
-                formControlName="sets"
-                placeholder="Sets"
-                *ngIf="hasSets(i)"
-              />
-              <input
-                formControlName="reps"
-                placeholder="Repetitions"
-                *ngIf="hasReps(i)"
-              />
-              <input
-                formControlName="weight"
-                placeholder="Weight (kg)"
-                *ngIf="hasWeight(i)"
-              />
-              <input formControlName="duration" placeholder="Duration (min)" />
-              <!-- [(ngModel)]="name" [(ngModel)]="sets" [(ngModel)]="reps" [(ngModel)]="weight" -->
+              <div class="inputField-container">
+                <ion-label>Exercise name*</ion-label>
+                <ion-item lines="none" class="input-field">
+                  <ion-select formControlName="name" placeholder="Select an exercise" (ionChange)="exerciseSelected($event, i)">
+                    <ion-select-option value="Barbell Curls">Barbell Curls</ion-select-option>
+                    <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
+                    <ion-select-option value="Bench Presses">Bench Presses</ion-select-option>
+                    <ion-select-option value="Bicep Curls">Bicep Curls</ion-select-option>
+                    <ion-select-option value="Burpees">Burpees</ion-select-option>
+                    <ion-select-option value="Calf Raises">Calf Raises</ion-select-option>
+                    <ion-select-option value="Chest Press">Chest Press</ion-select-option>
+                    <ion-select-option value="Crunches">Crunches</ion-select-option>
+                    <ion-select-option value="Deadlifts">Deadlifts</ion-select-option>
+                    <ion-select-option value="Dumbbell Rows">Dumbbell Rows</ion-select-option>
+                    <ion-select-option value="Jumping Jacks">Jumping Jacks</ion-select-option>
+                    <ion-select-option value="Leg Curls">Leg Curls</ion-select-option>
+                    <ion-select-option value="Leg Presses">Leg Presses</ion-select-option>
+                    <ion-select-option value="Lunges">Lunges</ion-select-option>
+                    <ion-select-option value="Planks">Planks</ion-select-option>
+                    <ion-select-option value="Pull-Ups">Pull-Ups</ion-select-option>
+                    <ion-select-option value="Push-Ups">Push-Ups</ion-select-option>
+                    <ion-select-option value="Seated Cable Rows">Seated Cable Rows</ion-select-option>
+                    <ion-select-option value="Sit-Ups">Sit-Ups</ion-select-option>
+                    <ion-select-option value="Squats">Squats</ion-select-option>
+                    <ion-select-option value="Stretches">Stretches</ion-select-option>
+                    <ion-select-option value="Tricep Curls">Tricep Curls</ion-select-option>
+                  </ion-select>
+                </ion-item>
+              </div>
+  
+             <ion-row>
+               <ion-col size="6" size-lg="3">
+                <div class="inputField-container" *ngIf="hasSets(i)">
+                  <ion-label>Sets*</ion-label>
+                  <ion-item lines="none" class="input-field">
+                    <ion-input formControlName="sets" type="number" placeholder="Sets"></ion-input>
+                  </ion-item>
+                </div>
+               </ion-col>
+               <ion-col size="6" size-lg="3">
+                <div class="inputField-container" *ngIf="hasReps(i)">
+                  <ion-label>Reps*</ion-label>
+                  <ion-item lines="none" class="input-field">
+                    <ion-input formControlName="reps" type="number" placeholder="Repetitions"></ion-input>
+                  </ion-item>
+                </div>
+               </ion-col>
+               <ion-col size="6" size-lg="3">
+                <div class="inputField-container" *ngIf="hasWeight(i)">
+                  <ion-label>Weight*</ion-label>
+                  <ion-item lines="none" class="input-field">
+                    <ion-input formControlName="weight" type="number" placeholder="Weight (kg)"></ion-input>
+                  </ion-item>
+                </div>
+               </ion-col>
+               <ion-col size="6" size-lg="3">
+                <div class="inputField-container">
+                  <ion-label>Duration*</ion-label>
+                  <ion-item lines="none" class="input-field">
+                    <ion-input formControlName="duration" type="number" placeholder="Duration (min)"></ion-input>
+                  </ion-item>
+                </div>
+               </ion-col>
+             </ion-row>
             </div>
-            <ion-button
-              color="danger"
-              type="button"
-              (click)="deleteExercise(i)"
-            >
+            <ion-button color="danger" type="button" (click)="deleteExercise(i)">
               <ion-icon name="trash"></ion-icon>
             </ion-button>
           </div>
-
-          <ion-button class="adder" type="button" (click)="addExercise()">
+  
+          <ion-button class="adder" type="button" (click)="addExercise()" [disabled]="exercises.length >= 10">
             <ion-icon name="add"></ion-icon>
           </ion-button>
-          <ion-button
+          
+           <ion-button
             class="submitbutton"
             type="button"
             (click)="calculateTotalCaloriesBurned()"
