--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -79,31 +79,33 @@
 </ion-header>
 
 <ion-content id="main-content">
-  <ion-router-outlet> </ion-router-outlet>
+  <ion-router-outlet></ion-router-outlet>
 </ion-content>
   
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="dashboard">
-      <ion-icon name="home-outline"></ion-icon>
+      <ion-icon name="home" class="tab-icon"></ion-icon>
       Home
     </ion-tab-button>
     
     <ion-tab-button tab="messages">
-      <ion-icon name="chatbubble-ellipses-outline"></ion-icon>
+      <ion-icon name="chatbubble-ellipses" class="tab-icon"></ion-icon>
       Messages
-    </ion-tab-button >
+    </ion-tab-button>
 
     <ion-tab-button tab="search">
-      <ion-icon name="search"></ion-icon>
+      <ion-icon name="search" class="tab-icon"></ion-icon>
       Search
     </ion-tab-button>
+    
     <ion-tab-button tab="leaderboard">
-      <ion-icon name="bar-chart-outline"></ion-icon>
+      <ion-icon name="bar-chart" class="tab-icon"></ion-icon>
       Boards
     </ion-tab-button>
+    
     <ion-tab-button tab="chatbot">
-      <ion-icon name="logo-ionitron"></ion-icon>
+      <ion-icon name="logo-ionitron" class="tab-icon"></ion-icon>
       Chatbot
     </ion-tab-button>
   </ion-tab-bar>
