--- a/src/app/pages/messages/group-user/group-user.component.html
+++ b/src/app/pages/messages/group-user/group-user.component.html
@@ -4,8 +4,8 @@
       <ion-img [src]="profile.profileURL"></ion-img>
     </ion-avatar>
     <ion-label>
-      <h2 *ngIf="userId !== currentUserId">{{profile.displayName}}</h2>
-      <h2 *ngIf="userId === currentUserId">{{profile.displayName}} (You)</h2>
+      <h2 *ngIf="userId !== currentUserId" class="user-name">{{profile.displayName}}</h2>
+      <h2 *ngIf="userId === currentUserId" class="user-name">{{profile.displayName}} (You)</h2>
       <p class="bio">{{"~ " + profile.bio}}</p>
     </ion-label>
   </ion-item>
