--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -61,7 +61,7 @@ ion-icon.inactive {
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
+    // transition: background-color 0.3s ease-in-out;
   }
   
   .completed {
