--- a/src/app/pages/healthdata/healthdata.page.html
+++ b/src/app/pages/healthdata/healthdata.page.html
@@ -25,18 +25,18 @@
       <ion-row>
         <ion-col size="6">
           <div class="input-field-container">
-            <ion-label class="customlabel">Height (cm)</ion-label>
+            <!-- <ion-label class="customlabel">Height (cm)</ion-label> -->
             <ion-item class="input-field" lines="none">
-              <ion-input formControlName="height" type="number"></ion-input>
+              <ion-input label="Height (cm)"  labelPlacement="stacked"  formControlName="height" type="number"></ion-input>
             </ion-item>
           </div>
         </ion-col>
 
         <ion-col size="6">
           <div class="input-field-container">
-            <ion-label class="customlabel">Weight (kg)</ion-label>
+            <!-- <ion-label class="customlabel">Weight (kg)</ion-label> -->
             <ion-item class="input-field" lines="none">
-              <ion-input formControlName="weight" type="text"></ion-input>
+              <ion-input label="Weight (kg)"  labelPlacement="stacked"  formControlName="weight" type="text"></ion-input>
             </ion-item>
           </div>
         </ion-col>
@@ -45,9 +45,9 @@
         <ion-col size="6">
             
           <div class="input-field-container">
-            <ion-label class="customlabel">Sex</ion-label>
+            <!-- <ion-label class="customlabel">Sex</ion-label> -->
             <ion-item class="input-field" lines="none">
-              <ion-select formControlName="gender">
+              <ion-select label="Sex" labelPlacement="stacked" formControlName="gender">
                 <ion-select-option value="Male">Male</ion-select-option>
                 <ion-select-option value="Female">Female</ion-select-option>
                 <ion-select-option value="Prefer not to say">Prefer not to say</ion-select-option>
@@ -58,9 +58,9 @@
 
         <ion-col size="6">
           <div class="input-field-container">
-            <ion-label class="customlabel">Age</ion-label>
+            <!-- <ion-label class="customlabel">Age</ion-label> -->
             <ion-item class="input-field" lines="none">
-              <ion-input formControlName="age" type="text"></ion-input>
+              <ion-input label="Age"  labelPlacement="stacked"  formControlName="age" type="text"></ion-input>
             </ion-item>
           </div>
         </ion-col>
@@ -69,9 +69,9 @@
       <ion-row>
         <ion-col size="12">
           <div class="input-field-container">
-            <ion-label class="customlabel">Diet</ion-label>
+            <!-- <ion-label class="customlabel">Diet</ion-label> -->
             <ion-item class="input-field" lines="none">
-              <ion-input formControlName="diet" type="text"></ion-input>
+              <ion-input label="Diet"  labelPlacement="stacked"  formControlName="diet" type="text"></ion-input>
             </ion-item>
           </div>
         </ion-col>
@@ -82,9 +82,9 @@
       <ion-row>
         <ion-col size="12">
           <div class="input-field-container">
-            <ion-label class="customlabel">Medical Conditions</ion-label>
+            <!-- <ion-label class="customlabel">Medical Conditions</ion-label> -->
             <ion-item class="input-field" lines="none">
-              <ion-input formControlName="medicalConditions" type="text"></ion-input>
+              <ion-input label="Medical Conditions"  labelPlacement="stacked"  formControlName="medicalConditions" type="text"></ion-input>
             </ion-item>
           </div>
         </ion-col>
@@ -93,9 +93,9 @@
       <ion-row>
         <ion-col size="12">
           <div class="input-field-container">
-            <ion-label class="customlabel" for="weightGoals">Weight Goals</ion-label>
+            <!-- <ion-label class="customlabel" for="weightGoals">Weight Goals</ion-label> -->
             <ion-item class="input-field" lines="none">
-              <ion-select formControlName="weightGoals" class="form-control">
+              <ion-select label="Weight Goals"  labelPlacement="stacked" formControlName="weightGoals" class="form-control">
                 <ion-select-option value="-1">Lose 1Kg per Week</ion-select-option>
                 <ion-select-option value="-0.75">Lose 0.75kg per week</ion-select-option>
                 <ion-select-option value="-0.5">Lose 0.5kg per week</ion-select-option>
@@ -114,9 +114,9 @@
       <ion-row>
         <ion-col size="12">
         <div class="input-field-container">
-          <ion-label class="customlabel" for="workoutCommitment">Workout Commitment</ion-label>
+          <!-- <ion-label class="customlabel" for="workoutCommitment">Workout Commitment</ion-label> -->
           <ion-item class="input-field" lines="none">
-            <ion-select formControlName="workoutCommitment" class="form-control">
+            <ion-select label="Workout Commitment"  labelPlacement="stacked" formControlName="workoutCommitment" class="form-control">
               <ion-select-option value="Low Commitment (0-1 days/week)">Low Commitment (0-1 days/week)</ion-select-option>
               <ion-select-option value="Medium Commitment (2-3 days/week)">Medium Commitment (2-3 days/week)</ion-select-option>
               <ion-select-option value="High Commitment (4-5 days/week)">High Commitment (4-5 days/week)</ion-select-option>
