--- a/src/app/pages/workout-scheduling/schedule/schedule.component.html
+++ b/src/app/pages/workout-scheduling/schedule/schedule.component.html
@@ -1,4 +1,4 @@
-<search class="custom-search" [data]="schedules" [placeholder]="'Find Scheduled Sessions'">Find schedule</search>
+<!-- <search class="custom-search" [data]="schedules" [placeholder]="'Find Scheduled Sessions'">Find schedule</search> -->
 
 <div *ngFor="let schedule of schedules;  let i=index" class="schedules">
   <schedule-content 
