--- a/src/app/pages/workout-tracking/workout-tracking.page.html
+++ b/src/app/pages/workout-tracking/workout-tracking.page.html
@@ -22,9 +22,9 @@
           <div class="exercise-number">Exercise {{ i + 1 }}</div>
           <div [formGroupName]="i">
             <div class="inputField-container">
-              <ion-label>Exercise name*</ion-label>
+              <!-- <ion-label>Exercise name*</ion-label> -->
               <ion-item lines="none" class="input-field">
-                <ion-select formControlName="name" placeholder="Select an exercise" (ionChange)="exerciseSelected($event, i)">
+                <ion-select label="Exercise name" labelPlacement="stacked" formControlName="name" placeholder="Select an exercise" (ionChange)="exerciseSelected($event, i)">
                   <ion-select-option value="Barbell Curls">Barbell Curls</ion-select-option>
                   <ion-select-option value="Barbell Rows">Barbell Rows</ion-select-option>
                   <ion-select-option value="Bench Presses">Bench Presses</ion-select-option>
@@ -54,33 +54,33 @@
            <ion-row>
              <ion-col size="6" size-lg="3">
               <div class="inputField-container" *ngIf="hasSets(i)">
-                <ion-label>Sets*</ion-label>
+                <!-- <ion-label>Sets*</ion-label> -->
                 <ion-item lines="none" class="input-field">
-                  <ion-input formControlName="sets" type="number" placeholder="Sets"></ion-input>
+                  <ion-input label="Sets*" labelPlacement="stacked" formControlName="sets" type="number" placeholder="Sets"></ion-input>
                 </ion-item>
               </div>
              </ion-col>
              <ion-col size="6" size-lg="3">
               <div class="inputField-container" *ngIf="hasReps(i)">
-                <ion-label>Reps*</ion-label>
+                <!-- <ion-label>Reps*</ion-label> -->
                 <ion-item lines="none" class="input-field">
-                  <ion-input formControlName="reps" type="number" placeholder="Repetitions"></ion-input>
+                  <ion-input label="Reps*" labelPlacement="stacked" formControlName="reps" type="number" placeholder="Repetitions"></ion-input>
                 </ion-item>
               </div>
              </ion-col>
              <ion-col size="6" size-lg="3">
               <div class="inputField-container" *ngIf="hasWeight(i)">
-                <ion-label>Weight*</ion-label>
+                <!-- <ion-label>Weight*</ion-label> -->
                 <ion-item lines="none" class="input-field">
-                  <ion-input formControlName="weight" type="number" placeholder="Weight (kg)"></ion-input>
+                  <ion-input label="Weight(kg)*" labelPlacement="stacked" formControlName="weight" type="number" placeholder="Weight (kg)"></ion-input>
                 </ion-item>
               </div>
              </ion-col>
              <ion-col size="6" size-lg="3">
               <div class="inputField-container">
-                <ion-label>Duration*</ion-label>
+                <!-- <ion-label>Duration*</ion-label> -->
                 <ion-item lines="none" class="input-field">
-                  <ion-input formControlName="duration" type="number" placeholder="Duration (min)"></ion-input>
+                  <ion-input label="Duration(min)*" labelPlacement="stacked" formControlName="duration" type="number" placeholder="Duration (min)"></ion-input>
                 </ion-item>
               </div>
              </ion-col>
