--- a/src/app/pages/health-data-display/health-data-display.page.html
+++ b/src/app/pages/health-data-display/health-data-display.page.html
@@ -33,45 +33,87 @@
 
         </ion-card>
 
-        <ion-card class="welcome-card">
-          <ion-card-header>
-            <ion-card-title>Health Data details</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ion-item>
-              <ion-label>Age</ion-label>
-              <ion-input type="text" value="21" readonly></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Height</ion-label>
-              <ion-input type="text" value="5' 10" readonly></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Weight</ion-label>
-              <ion-input type="text" value="150 lbs" readonly></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Blood Type</ion-label>
-              <ion-input type="text" value="O+" readonly></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Medical Conditions</ion-label>
-              <ion-input type="text" value="None" readonly></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Medications</ion-label>
-              <ion-input type="text" value="None" readonly></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Allergies</ion-label>
-              <ion-input type="text" value="None" readonly></ion-input>
-            </ion-item>
-            <ion-item>
-              <ion-label>Emergency Contact</ion-label>
-              <ion-input type="text" value="None" readonly></ion-input>
-            </ion-item>
-          </ion-card-content>
-        </ion-card>
+<!--        <ion-card class="welcome-card">-->
+<!--          <ion-card-header>-->
+<!--            <ion-card-title>Health Data details</ion-card-title>-->
+<!--          </ion-card-header>-->
+<!--          <ion-card-content>-->
+
+            <ion-grid>
+              <ion-row>
+
+                <ion-col size="6">
+                  <div class="input-field-container">
+                    <ion-label class="customlabel">Age</ion-label>
+                    <ion-item class="input-field" lines="none">
+                      <ion-input value="{{this.healthData.age}}" readonly></ion-input>
+                    </ion-item>
+                  </div>
+                </ion-col>
+                <ion-col size="6">
+                  <div class="input-field-container">
+                    <ion-label class="customlabel">Gender</ion-label>
+                    <ion-item class="input-field" lines="none">
+                      <ion-input value="{{this.healthData.gender}}" readonly></ion-input>
+                    </ion-item>
+                  </div>
+                </ion-col>
+              </ion-row>
+
+                <ion-row>
+                    <ion-col size="6">
+                        <div class="input-field-container">
+                            <ion-label class="customlabel">Height</ion-label>
+                            <ion-item class="input-field" lines="none">
+                                <ion-input value="{{this.healthData.height}}" readonly></ion-input>
+                            </ion-item>
+                        </div>
+                    </ion-col>
+                    <ion-col size="6">
+                        <div class="input-field-container">
+                            <ion-label class="customlabel">Weight</ion-label>
+                            <ion-item class="input-field" lines="none">
+                                <ion-input value="{{this.healthData.weight}}" readonly></ion-input>
+                            </ion-item>
+                        </div>
+                    </ion-col>
+                </ion-row>
+
+                <ion-row>
+                    <ion-col size="12">
+                        <div class="input-field-container">
+                            <ion-label class="customlabel">Medical Condition</ion-label>
+                            <ion-item class="input-field" lines="none">
+                                <ion-input value="{{this.healthData.medicalConditions}}" readonly></ion-input>
+                            </ion-item>
+                        </div>
+                    </ion-col>
+                </ion-row>
+
+                <ion-row>
+                    <ion-col size="12">
+                        <div class="input-field-container">
+                            <ion-label class="customlabel">Weight Goals</ion-label>
+                            <ion-item class="input-field" lines="none">
+                                <ion-input value="{{this.healthData.weightGoals}}" readonly></ion-input>
+                            </ion-item>
+                        </div>
+                    </ion-col>
+                </ion-row>
+
+                <ion-row>
+                    <ion-col size="12">
+                        <div class="input-field-container">
+                            <ion-label class="customlabel">Workout Commitments</ion-label>
+                            <ion-item class="input-field" lines="none">
+                                <ion-input value="{{this.healthData.workoutCommitment}}" readonly></ion-input>
+                            </ion-item>
+                        </div>
+                    </ion-col>
+                </ion-row>
+
+            </ion-grid>
+
       </ion-col>
     </ion-row>
   </ion-grid>
