updates weight progress

--- a/src/app/pages/health-data-display/health-data-display.page.html
+++ b/src/app/pages/health-data-display/health-data-display.page.html
@@ -35,7 +35,7 @@
             <ion-grid>
                 <ion-row>
                     <ion-card-header>
-                        <ion-card-title>Health Details</ion-card-title>
+                        <ion-card-title class="ion-align-self-center">Health Details</ion-card-title>
                     </ion-card-header>
                 </ion-row>
 
