validation + styling fixes

--- a/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
+++ b/src/app/pages/calories-calculator/exercise-calculator/exercise-calculator.component.html
@@ -99,6 +99,7 @@
             class="submitbutton"
             type="button"
             (click)="calculateTotalCaloriesBurned()"
+            [disabled]="!isValidInput()"
           >
             Calculate Calories
           </ion-button>
