--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -13,8 +13,8 @@
         <ion-row class="ion-justify-content-center">
           <ion-col size="12" size-lg="6">
             <div class="title-container">
-              <h1 class="title">SweatSession, Your Fitness Community</h1>
-              <h3 class="subtitle">Create a Workout Schedule for a Stronger, Healthier You.</h3>
+              <h1 class="title">SweatSession - Your Personal Fitness App</h1>
+              <h3 class="subtitle">Add a New Workout Session for a Stronger, Healthier You.</h3>
             </div>
           </ion-col>
         </ion-row>
