ts and cs fixes

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -3,7 +3,7 @@
     <ion-grid>
       <ion-row >
         <ion-col size="12" size-md="6" size-lg="4" class="welcome-container">
-          <h1 class="welcome-title">Welcome Back🤗</h1>
+          <h1 class="welcome-title">Welcome</h1>
           <p class="welcome-subtitle">Login to your account</p>
         </ion-col>
       </ion-row>
