--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -3,8 +3,8 @@
     <ion-grid>
       <ion-row >
         <ion-col size="12" size-md="6" size-lg="4" class="welcome-container">
-          <h1 class="welcome-title">Welcome Member🔥</h1>
-          <p class="welcome-subtitle">Create new account</p>
+          <h1 class="welcome-title">Welcome!</h1>
+          <p class="welcome-subtitle">Create a New Account</p>
         </ion-col>
       </ion-row>
       <ion-row class="form-container">
