view exercise button color fix

--- a/src/theme/dark-theme.scss
+++ b/src/theme/dark-theme.scss
@@ -79,4 +79,9 @@ body[color-theme="dark"] {
   swiper-container::part(bullet) {
     background-color: #4185ff;
   }
+
+  .exercise-button {
+    background-color: #4185ff;
+    color: white;
+  }
 }
