--- a/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
+++ b/src/app/pages/workout-scheduling/add-schedule/add-schedule.component.html
@@ -76,9 +76,9 @@
           <ion-note *ngIf="!isValidInput()" color="danger">
             *Please fill all the fields
           </ion-note>
-          <!-- <ion-note *ngIf="!IsvalidDuration()" color="danger">
+          <ion-note *ngIf="!IsvalidDuration()" color="danger">
             *Duration should be greater than 10 minutes
-          </ion-note> -->
+          </ion-note>
         </ion-row>
     
         <ion-row class="ion-justify-content-center">
