--- a/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
+++ b/src/app/pages/workout-scheduling/schedulecontent/schedule-content.component.scss
@@ -64,5 +64,9 @@ ion-icon.inactive {
   .completed {
     text-decoration: line-through;
   }
+
+  .exercise-card {
+    margin-top: 20px;
+  }
   
 
