--- a/src/theme/dark-theme.scss
+++ b/src/theme/dark-theme.scss
@@ -84,4 +84,21 @@ body[color-theme="dark"] {
     background-color: #4185ff;
     color: white;
   }
+
+  .message .message-content{
+    background-color: rgb(201, 201, 201);
+    color: black;
+    .smaller-item {
+      color: black;
+    }
+  }
+
+  .message-sent .message-content {
+    background-color: #BFDBEA;
+    color: black;
+  }
+
+  .message-timestamp {
+    color: rgb(46, 46, 46);
+  }
 }
