--- a/src/app/pages/splash/splash.page.scss
+++ b/src/app/pages/splash/splash.page.scss
@@ -5,8 +5,8 @@ ion-card {
   align-items: center;
   justify-content: center;
   border-radius: 0px;
-  background-color: white;
-  border: 2px solid #A8DADC;
+  //background-color: white;
+  //border: 2px solid #A8DADC;
   overflow-y:auto;
   .inner-wrapper {
     max-width: 500px;
@@ -20,7 +20,7 @@ ion-card {
       font-weight: bolder;
     }
   }  
-  color:  rgba(#584d4e,0.5);
+  color:  White;
   font-weight: bold;
   font-style:initial;
 }
@@ -36,7 +36,7 @@ ion-button {
   --background-activated: #88f4be;
   --background-focused: #88f4be;
 
-  --color: #000;
+  --color: white;
 
   --border-radius: 10px;
   --border-color: #E63946;
@@ -121,7 +121,7 @@ button.learn-more .button-text {
   bottom: 0;
   padding: 0.75rem 0;
   margin: 0 0 0 1.85rem;
-  color: #282936;
+  color: #ffffff;
   font-weight: 700;
   line-height: 1.6;
   text-align: center;
